--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,28 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding: 0;
+  margin-bottom: 32px;
+  /* padding-bottom: 8px; */
+  justify-content: center;
+  align-items: center;
+
+}
+
+.container{
+  /* display: flex; */
+  text-align: center;
+  justify-content: center;
+
+}
+
+.image{
+  padding: 3px;
+  margin: 8px;
+  gap: 32px;
+  display: flex;
+  align-self: center;
+  /* border: 10px solid firebrick; */
 }
 
 /* do not edit this footer */
