--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
 .icon {
@@ -33,6 +37,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-content: start;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -46,6 +52,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: flex-end;
   border: 1px solid #eee;
   padding: 0;
 }
@@ -66,4 +73,16 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.text{
+  margin-bottom: 16px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: bolder;
+  margin-bottom: 8px;
 }
